# CLEF2025-4b

./: .gitignore  README.md  pyproject.toml
task4/subtask_4b/: getting_started_subtask4b.ipynb
task4/subtask_4b/neural_NLP/: .test_results_02_epochs.tsv  neural_ir_sbert_final.ipynb  neural_ir_sbert_finetuned.ipynb  test_results.tsv  test_results_PubMedBert_10_epochs.tsv
task4/subtask_4b/neural_reranking/: neural_reranking.ipynb  neural_reranking_final.ipynb  predictions.tsv  ranked_dev  ranked_test  traditional_ir_copy_test.ipynb
task4/subtask_4b/traditional_IR/: traditional_ir.ipynb
