[project]
name = "clef2025-checkthat-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Trauner",email = "e12019868@student.tuwien.ac.at"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
